--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "stylus-brunch": "^2.6.0",
-    "nib": "^1.1.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
-    "brunch": "2.7.4",
     "babel-preset-react": "~6.11.1",
     "babel-preset-stage-0": "~6.5.0",
+    "brunch": "2.7.4",
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
+    "elm-brunch": "^0.7.0",
     "javascript-brunch": "~2.0.0",
     "uglify-js-brunch": "~2.0.1"
   }
